[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/NewGame.gd" type="Script" id=2]
[ext_resource path="res://fonts/ferrum.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/StyledButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/basalt.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/basalt_small.tres" type="DynamicFont" id=6]

[node name="Control" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="NewGame" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="NewGame"]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="NewGame/HBoxContainer"]
margin_right = 315.0
margin_bottom = 400.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="NewGame/HBoxContainer/VBoxContainer"]
margin_right = 315.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 3 )
text = "New Game"
align = 1

[node name="Edit" parent="NewGame/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 59.0
margin_right = 315.0
margin_bottom = 108.0
disabled = true
text = "Editing"

[node name="HBoxContainer" type="HBoxContainer" parent="NewGame/HBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 118.0
margin_right = 315.0
margin_bottom = 216.0

[node name="Left" type="VBoxContainer" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 98.0
margin_bottom = 98.0

[node name="Name" type="Label" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer/Left"]
margin_right = 98.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 30 )
custom_fonts/font = ExtResource( 5 )
text = "Name"

[node name="Seed" type="Label" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer/Left"]
margin_top = 34.0
margin_right = 98.0
margin_bottom = 64.0
rect_min_size = Vector2( 75, 30 )
custom_fonts/font = ExtResource( 5 )
text = "Seed"

[node name="Difficulty" type="Label" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer/Left"]
margin_top = 68.0
margin_right = 98.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 5 )
text = "Difficulty"

[node name="Middle" type="VBoxContainer" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 111.0
margin_bottom = 98.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer/Middle"]
margin_right = 9.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 5 )
text = ":"
align = 1

[node name="Seed" type="Label" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer/Middle"]
margin_top = 34.0
margin_right = 9.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 5 )
text = ":"
align = 1

[node name="Difficulty" type="Label" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer/Middle"]
margin_top = 68.0
margin_right = 9.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 5 )
text = ":"
align = 1

[node name="Right" type="VBoxContainer" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 115.0
margin_right = 315.0
margin_bottom = 98.0
rect_min_size = Vector2( 200, 0 )

[node name="Name" type="LineEdit" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer/Right"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 125, 30 )
custom_fonts/font = ExtResource( 6 )
text = "ArctusMinor"
align = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="Seed" type="LineEdit" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer/Right"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 125, 30 )
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="Difficulty" type="OptionButton" parent="NewGame/HBoxContainer/VBoxContainer/HBoxContainer/Right"]
margin_top = 68.0
margin_right = 200.0
margin_bottom = 98.0
rect_min_size = Vector2( 125, 30 )
custom_fonts/font = ExtResource( 6 )
text = "Normal"
items = [ "Easy", null, false, 0, null, "Normal", null, false, 1, null, "Hard", null, false, 2, null ]
selected = 1

[node name="Validate" parent="NewGame/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 226.0
margin_right = 315.0
margin_bottom = 275.0
text = "Validate"

[node name="Generate" parent="NewGame/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 285.0
margin_right = 315.0
margin_bottom = 334.0
disabled = true
text = "Generate World"

[node name="Back" parent="NewGame/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 344.0
margin_right = 315.0
margin_bottom = 393.0
text = "Back"
[connection signal="pressed" from="NewGame/HBoxContainer/VBoxContainer/Edit" to="NewGame" method="_on_Edit_pressed"]
[connection signal="pressed" from="NewGame/HBoxContainer/VBoxContainer/Validate" to="NewGame" method="_on_Validate_pressed"]
[connection signal="pressed" from="NewGame/HBoxContainer/VBoxContainer/Generate" to="NewGame" method="_on_Generate_pressed"]
[connection signal="pressed" from="NewGame/HBoxContainer/VBoxContainer/Back" to="NewGame" method="_on_Back_pressed"]
